syntax = "proto2";

package Wal;

option go_package = "../src/allpb";

message ErrInfo {
  optional int32  code = 1;
  optional string msg = 2;
}

message RegisterRQ {
  optional string email = 1;
  optional string name = 2;
  optional int32  verifyCode = 3;
  optional string passwd = 4;
}

message RegisterRS {
  optional ErrInfo err = 1;
  optional int64   own = 2;
}

message LoginRQ {
  optional int64  own = 1;
  optional string passwd = 2;
}

message LoginRS {
  optional ErrInfo  err = 1;
  optional string   name = 2;
}

message SendToPersonalRQ {
  optional int64  own = 1;
  optional int64  peer = 2;
  optional string content = 3;
  optional int64  timeStamp = 4;
}

message SendToPersonalRS {
  optional ErrInfo err = 1;
  optional string  name = 2;
}

message CreateTempGroupRQ {
  optional int64  own = 1;
  optional string name = 2;
  optional int64  code = 3;
  optional int64  timeStamp = 4;
}

message CreateTempGroupRS {
  optional ErrInfo  err = 1;
  optional int64    group = 2;
  optional int64    code = 3;
}

// 加入group就是订阅,退出就是取消
message JoinGroupRQ {
  optional int64  own = 1;
  optional int64  group = 2;
  optional int64  code = 3;
  optional int64  timeStamp = 4;
  optional int32  op = 5; // 0-订阅 1-取消
}

message JoinGroupRS {
  optional ErrInfo  err = 1;
  optional string   groupName = 2;
}

message SendToTempGroupRQ {
  optional int64  own = 1;
  optional int64  group = 2;
  optional string content = 3;
  optional int64  timeStamp = 4;
}

message SendToTempGroupRS {
  optional ErrInfo err = 1;
  optional string  name = 2;
}

message PeerInfo {
  optional int64  peer = 1;
  optional string name = 2;
  optional int64  timeStamp = 3;
}

message GroupInfo {
  optional int64  group = 1;
  optional string name = 2;
  optional int64  createTime = 3;
  optional int64  code = 4;
  optional int64  joinTime = 5;
}

message SubscribePersonRQ {
  optional int64  own = 1;
  repeated int64  peers = 2;
  optional int64  timeStamp = 3;
  optional int32  op = 4; // 0-订阅 1-取消 2-订阅世界消息 3-取消订阅世界消息
}

message SubscribePersonRS {
  optional ErrInfo    err = 1;
  repeated PeerInfo   peers = 2;
  optional int32      op = 3;
}

message SubscribeTempGroupRQ {
  optional int64  own = 1;
  repeated int64  groups = 2;
  optional int64  timeStamp = 3;
  optional int32  op = 4; // 0-订阅 1-取消
}

message SubscribeTempGroupRS {
  optional ErrInfo err = 1;
  repeated int64  groups = 2;
}

message GroupMemberItem {
  optional int64  uid = 1;
  optional string name = 2;
  optional int64  joinTime = 3;
}

message GroupMembersRQ {
  optional int64  own = 1;
  optional int64  group = 2;
}

message GroupMembersRS {
  optional ErrInfo          err = 1;
  repeated GroupMemberItem  members = 2;
}

message SelfRelationRQ {
  optional int64 own = 1;
}

message SelfRelationRS {
  optional ErrInfo    err = 1;
  repeated PeerInfo   subscribers = 2;
  repeated PeerInfo   followers = 3;
  repeated GroupInfo  groups = 4;
}

message SendWorldMessageRQ {
  optional int64      own = 1;
  optional string     content = 2;
  optional int64      timeStamp = 3;
  optional int32      op = 4;
}

message SendWorldMessageRS {
  optional ErrInfo    err = 1;
}

// server -> client

message PublishPersonalMsgRQ {
  optional int64  peer = 1;
  optional string name = 2;
  optional string content = 3;
  optional int64  timeStamp = 4;
  optional int32  op = 5;   // 0-普通私人消息 1-世界消息
}

message PublishPersonalMsgRS {

}

message PublishGroupMsgRQ {
  optional int64  group = 1;
  optional string name = 2;
  optional string content = 3;
  optional int64  timeStamp = 4;
  optional int64  peer = 5;
  optional string peerName = 6;
}

message PublishGroupMsgRS {

}

message PublishSubscribeMsgRQ {
  optional int64  peer = 1;
  optional string name = 2;
  optional int64  timeStamp = 3;
  optional int32  op = 4; // // 0-订阅 1-取消 2-订阅世界消息 3-取消订阅世界消息
}

message PublishSubscribeMsgRS {
}

message PublishGroupMemberChangeRQ {
  optional int32  op = 1; // 0-加入组 1-退出组
  optional int64  peer = 2;
  optional string name = 3;
  optional int64  group = 4;
  optional string groupName = 5;
  optional int64  timeStamp = 6;
}

message PublishGroupMemberChangeRS {

}

message CancelSubscribeAllRQ {
  optional int64  own = 1;
  optional int64  timeStamp = 2;
}

message CancelSubscribeAllRS {
  optional ErrInfo err = 1;
}



// 保存在leveldb

message UserInfo {
  optional int64  own = 1;
  optional string email = 2;
  optional string name = 3;
  optional string passwd = 4;
  optional int64  registerTime = 5;
}

message FriendInfo {
  optional int64 own = 1;
  repeated int64 peers = 2;
}

